<resources>
    <string name="app_name">Room Data Base</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_new_account">Create new account</string>
    <string name="signup">Signup</string>
    <string name="create_your_account">Create your account</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_">email*</string>
    <string name="full_name">FullName*</string>
    <string name="enter_email">Enter Email</string>
</resources>