<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="viewModel"
            type="com.anurupjaiswal.roomdatabase.viewmodel.UserViewModel" />
    </data>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/black">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">





            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/edit_profile"
                android:textSize="20sp"
                android:textColor="@color/white"
                />

        </LinearLayout>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="50dp"
            app:strokeWidth="0dp">


            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth="1.2dp"
            app:cardBackgroundColor="@color/black"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="30dp"
            app:strokeColor="@color/strokeColor"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:padding="13dp"
                android:enabled="false"
                android:text="@={viewModel.email}"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                tools:ignore="Autofill" />


        </com.google.android.material.card.MaterialCardView>

        <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_custom"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:hint="@string/name"
                android:text="@={viewModel.name}"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:layout_marginTop="20dp"

                android:paddingVertical="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
            tools:ignore="Autofill" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Country*"
            android:textColor="@color/white"
            android:textSize="12sp" />



        <EditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_custom"
            android:hint="Enter Country"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:text="@={viewModel.country}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/poppins_medium"
            android:text="State*"
            android:textColor="@color/white"
            android:textSize="12sp" />



        <EditText
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_custom"
            android:hint="Enter State"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:text="@={viewModel.state}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:autofillHints="emailAddress" />




        <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_custom"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_password"
                android:includeFontPadding="false"
                android:padding="13dp"
                android:singleLine="true"
                android:text="@={viewModel.password}"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                 android:textColorHint="@color/white"
                android:textSize="12sp"
                tools:ignore="Autofill,TextFields" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="0.7dp"
            android:onClick="@{() -> viewModel.onSaveButtonClick()}">

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:textSize="18sp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:gravity="center"

                />
            
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="0.7dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delete_account"
                android:textSize="18sp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
